--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.1",
@@ -17,6 +18,7 @@
     "react-slick": "^0.29.0",
     "react-spinner-overlay": "^0.1.33",
     "slick-carousel": "^1.8.1",
+    "ts-node": "^10.9.2",
     "zustand": "^4.4.2"
   },
   "devDependencies": {
@@ -24,17 +26,24 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jwt-decode": "^3.1.2",
     "postcss": "^8",
     "react-icons": "^4.3.1",
     "react-loading-spin": "^2.1.9",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   }
 }
