--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.1",
+    "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "next": "13.5.4",
     "react": "^18",
