--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.1",
+    "axios": "^1.6.3",
     "dotenv": "^16.3.1",
     "next": "13.5.4",
+    "next-router-mock": "^0.9.11",
     "react": "^18",
     "react-dom": "^18",
     "react-slick": "^0.29.0",
