--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-location-mock": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "postcss": "^8",
     "react-icons": "^4.3.1",
